Fix overlapping main menu on small screens

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -158,6 +158,7 @@ header * .main-menu-search a .nav-link {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   font-size: 0.9rem;
+  box-sizing: unset;
 }
 .navbar-nav .dropdown {
   padding-left: 1.5rem;
